--- a/css/main.css
+++ b/css/main.css
@@ -21,8 +21,8 @@
 }
 
 .nav_bar{
-  /* background-color: #b3b105; */
-  margin-left: 23px;
+  margin-left: 0px;
+
 }
 
 .navbr{
@@ -40,6 +40,7 @@
   font-size: 17px;
   text-decoration: none;
   padding: 10px;
+  outline: none;
 }
 
 .navbr li a:hover{
@@ -61,8 +62,55 @@
   top:4px;
 }
 
-.sec_list{
-  list-style-type: none;
+.information{
+  border: 5px double #105195;
+  padding: 10px ;
+  width: 195px;
+  margin-right:px;
 }
 
-.sec_list
+.information h3{
+  color:white;
+  background-color:#f09711;
+  font-family: sans-serif;
+  margin: 0px 0px;
+  font-size: 22px;
+
+}
+
+.sec_list{
+  list-style-type: none;
+  color: inherit;
+  background-color:
+}
+
+.seclist li a{
+  text-decoration: none;
+}
+
+.notice{
+  border:5px double #0bdd07;
+  padding: 10px ;
+  width: 215px;
+  margin-right:px;
+}
+
+.notice h3{
+  color:white;
+  background-color:#1149f0;
+  font-family: sans-serif;
+  margin: 0px 0px;
+  font-size: 22px;
+}
+
+.thrd_list{
+  list-style-type: square;
+  font-size: 17px;
+  margin:;
+  text-align: left;
+}
+
+.this{
+  margin-left: 20px;
+  padding-left: 5px;
+}
