--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,13 @@
   padding:0;
 }
 
+html{
+  overflow: inherit;
+}
+
 .container{
   width:1200px;
-   /* border: 2px solid red; */
+   border: 2px solid red;
   margin: 0px auto;
   text-align: center;
 }
