--- a/css/register.css
+++ b/css/register.css
@@ -4,7 +4,7 @@
 
 .container{
   width:1200px;
-   border: 2px solid red;
+   /* border: 2px solid red; */
   margin: 0px auto;
   text-align: center;
 }
