--- a/css/main.css
+++ b/css/main.css
@@ -3,12 +3,12 @@
 }
 
 html{
-  overflow: inherit;
+  overflow: ;
 }
 
 .container{
   width:1200px;
-   border: 2px solid red;
+   /* border: 2px solid red; */
   margin: 0px auto;
   text-align: center;
 }
