--- a/css/register.css
+++ b/css/register.css
@@ -6,7 +6,7 @@
   width:1200px;
    /* border: 2px solid red; */
   margin: 0px auto;
-  text-align: center;
+  text-align: ;
 }
 
 .head{
@@ -66,28 +66,5 @@
   width:550px;
   margin: 0px auto;
   font-size: 16.5px;
-  text-align: center;
-}
-
-.rgistr{
-  border-radius: 5px;
-  border: 3px outset #f3f70a;
-  background-color: #f2f4ef;
-}
-
-.rgistr label{
-  float: left;
-  width: 120px;
-  margin-left:40px ;
-  margin-right: 0px;
-  font-family: monospace;
-  /* border: 2px solid red; */
-  text-align: left;
-}
-
-.box{
-  padding: 5px;
-  border-radius: 5px;
-  outline: none;
-  ;
+  text-align:;
 }
