--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ html{
 
 .container{
   width:1200px;
+  background-color:;
    /* border: 2px solid red; */
   margin: 0px auto;
   text-align: center;
@@ -117,4 +118,49 @@ html{
 .this{
   margin-left: 20px;
   padding-left: 5px;
+}
+
+/*
+.linki{
+  color:white;
+  padding-left:30px;
+  /* border:2px solid red;
+} */
+
+.footr{
+  text-align: center;
+  margin:0px auto;
+  padding:0px auto;
+  width:100%;
+  height:270px;
+  background-image: linear-gradient(to top, rgb(73, 73, 75), rgb(171, 177, 175) );
+}
+
+.fot{
+  list-style-type: none;
+}
+
+.fot li{
+  float:left;
+  padding: 16px 3px;
+}
+
+.fot li a{
+  color: white;
+  font-size: 17px;
+  text-decoration: none;
+  padding: 10px;
+  outline: none;
+}
+
+.fot li a:hover{
+  color:#ffffff;
+  padding-bottom: 14px;
+  position:relative;
+  top:2.5px;
+}
+
+.fot li a:active{
+  position:relative;
+  top:5px;
 }
