--- a/css/main.css
+++ b/css/main.css
@@ -131,8 +131,8 @@ html{
   text-align: center;
   margin:0px auto;
   padding:0px auto;
-  width:100%;
-  height:270px;
+  width:1340px;
+  /* height:270px; */
   background-image: linear-gradient(to top, rgb(73, 73, 75), rgb(171, 177, 175) );
 }
 
@@ -154,13 +154,55 @@ html{
 }
 
 .fot li a:hover{
-  color:#ffffff;
+  color:#f9bebe;
   padding-bottom: 14px;
   position:relative;
   top:2.5px;
+  text-decoration: underline;
 }
 
 .fot li a:active{
   position:relative;
   top:5px;
+}
+
+.par{
+  text-align: center;
+  width:1100px;
+  /* margin:0px auto; */
+  margin-left: 98px;
+  color: rgb(77, 76, 78);
+}
+
+.par2{
+  text-align: center;
+  width:900px;
+  /* margin:0px auto; */
+  margin-left: 178px;
+  color: rgb(33, 32, 33);
+}
+
+.credits{
+  text-align: right;
+  padding-right: 80px;
+  color: #8a8686;
+  font-size: 21px;
+  /* text-decoration: underline; */
+}
+
+.crename{
+  color: #8e8989;
+  text-decoration: none;
+}
+
+.crename:hover{
+  position: relative;
+  top:2px;
+  text-decoration: underline;
+  color: #ffffff;
+}
+
+.crename:active{
+  position: relative;
+  top: 3px;
 }
